--- a/forms.html
+++ b/forms.html
@@ -6,6 +6,11 @@
     <title>Formulário</title>
 </head>
 <body>
-    
+    <form>
+        <label>
+            nome:
+            <input type="text"/>
+        </label>
+    </form>
 </body>
 </html>
