--- a/forms.html
+++ b/forms.html
@@ -11,6 +11,11 @@
             nome:
             <input type="text"/>
         </label>
+        <br>
+        <label>
+            email:
+            <input type="text"/>
+        </label>
     </form>
 </body>
 </html>
