--- a/forms.html
+++ b/forms.html
@@ -12,9 +12,16 @@
             <input type="text"/>
         </label>
         <br>
+        <br>
         <label>
             email:
             <input type="text"/>
+        </label>
+        <br>
+        <br>
+        <label>
+            senha:
+            <input type="password"/>
         </label>
     </form>
 </body>
