--- a/forms.html
+++ b/forms.html
@@ -23,6 +23,14 @@
             senha:
             <input type="password"/>
         </label>
+        <br>
+        <br>
+        <label>
+            confirmar
+            <br>
+            <br>
+            <input type="submit"/>
+        </label>
     </form>
 </body>
 </html>
