--- a/forms.html
+++ b/forms.html
@@ -7,31 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form>
-        <label>
-            nome:
-            <input type="text"/>
-        </label>
-        <br>
-        <br>
-        <label>
-            email:
-            <input type="text"/>
-        </label>
-        <br>
-        <br>
-        <label>
-            senha:
-            <input type="password"/>
-        </label>
-        <br>
-        <br>
-        <label>
-            confirmar
-            <br>
-            <br>
-            <input type="submit"/>
-        </label>
-    </form>
+    <div class="container">
+        <form>
+            <label for="name">Nome:</label>
+            <input type="text" id="name" name="name" placeholder="Digite seu nome" required/>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Digite seu email" pattern=".+@.+\..+" title="Por favor, insira um e-mail válido com '@' e um domínio." required/>
+
+            <label for="password">Senha:</label>
+            <input type="password" id="password" name="password" placeholder="Digite sua senha" required/>
+
+            <input type="submit" id="confirm" value="Enviar"/>
+        </form>
+    </div>
 </body>
 </html>
