--- a/forms.html
+++ b/forms.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Adiciona o CSS -->
 </head>
 <body>
     <div class="container">
-        <form>
+        <form id="myForm">
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" placeholder="Digite seu nome" required/>
 
@@ -20,6 +20,8 @@
 
             <input type="submit" id="confirm" value="Enviar"/>
         </form>
+        <div id="message" class="hidden"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
