--- a/forms.html
+++ b/forms.html
@@ -3,25 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Formulário com Abas</title>
     <link rel="stylesheet" href="styles.css"> <!-- Adiciona o CSS -->
 </head>
 <body>
     <div class="container">
-        <form id="myForm">
-            <label for="name">Nome:</label>
-            <input type="text" id="name" name="name" placeholder="Digite seu nome" required/>
+        <div class="tabs">
+            <button class="tablink" onclick="openTab(event, 'tab1')">Informações Pessoais</button>
+            <button class="tablink" onclick="openTab(event, 'tab2')">Segurança</button>
+        </div>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Digite seu email" pattern=".+@.+\..+" title="Por favor, insira um e-mail válido com '@' e um domínio." required/>
+        <div id="tab1" class="tabcontent">
+            <form id="myForm">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" placeholder="Digite seu nome" required/>
 
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" placeholder="Digite sua senha" required/>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Digite seu email" pattern=".+@.+\..+" title="Por favor, insira um e-mail válido com '@' e um domínio." required/>
 
-            <input type="submit" id="confirm" value="Enviar"/>
-        </form>
-        <div id="message" class="hidden"></div>
+                <button type="button" class="nextBtn" onclick="openTab(event, 'tab2')">Próximo</button>
+            </form>
+        </div>
+
+        <div id="tab2" class="tabcontent" style="display: none;">
+            <form id="securityForm">
+                <label for="password">Senha:</label>
+                <input type="password" id="password" name="password" placeholder="Digite sua senha" required/>
+
+                <input type="submit" id="confirm" value="Enviar"/>
+            </form>
+            <div id="message" class="hidden"></div> <!-- Mensagem que será exibida -->
+        </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Adiciona o JavaScript -->
 </body>
 </html>
